[metadata]
name = autopage
version = 0.4.0
author = Zane Bitter
author_email = zbitter@redhat.com
description = A library to provide automatic paging for console output
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zaneb/autopage
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Terminals
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
